issues with clipping on mhy laptop resolution.  fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
 */
 :root {
   --bg: #2f3530;
-  --bg-tr: #2f353055;
+  --bg-tr: #2f3530b0;
   --light-bg: #444b44;
   --text: #FFF;
   --heading: #ecaf35;
@@ -15,7 +15,6 @@
 */
 body {
   margin: 0;
-  margin-top: 200px;
   padding: 0;
   line-height: 1.4;
   background-color: var(--bg);
@@ -200,7 +199,7 @@ header {
 header.open {
   max-width: 100%;
   right: 0;
-  background: rgba(0, 0, 0, 0.455);
+  background: linear-gradient(to right, transparent 2.4rem, var(--bg-tr) 2.4rem);
 }
 
 .hamburger-helper {
@@ -465,6 +464,21 @@ nav {
   .image-left {
     grid-template-columns: max-content minmax(1ch,65ch);
   }
+  body {
+    margin-top:120px;
+  }
+  .header-logo {
+    display: none;
+  }
+  header.open {
+    
+    background: none;
+  }
+  header {
+    background: none;
+  }
+  
+  
 }
 
 /* 
